deploy: cfe856403835e871e54ccd98409582395551617a

--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{}
+{"assets/icon/servers.svg":["assets/icon/servers.svg"],"assets/icon/subtitle.svg":["assets/icon/subtitle.svg"],"assets/icon/target.svg":["assets/icon/target.svg"],"assets/icon/wishlist.svg":["assets/icon/wishlist.svg"],"assets/images/flixstar.png":["assets/images/flixstar.png"],"assets/images/ss.png":["assets/images/ss.png"]}
