--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   equatable: ^2.0.5
   get: ^4.6.6
   svg_flutter: ^0.0.1
+  dio: ^5.6.0
+  version: ^3.0.2
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
