--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
         run: flutter build web --release
 
       # Adjust the base href for GitHub Pages
-      - name: Adjust base href
-        run: sed -i 's|<base href="/">|<base href="/flix_web/">|' build/web/index.html
+     # - name: Adjust base href
+     #   run: sed -i 's|<base href="/">|<base href="/flix_web/">|' build/web/index.html
 
       # Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
